--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,12 +4,12 @@
       <div class="col-8 offset-2">
         <br><br>
         <h3>Create a New Listing</h3>
-        <form method="POST" action="/listings" novalidate class="needs-validation">
+        <form method="POST" action="/listings" novalidate class="needs-validation"enctype="multipart/form-data">
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" placeholder="Enter title" type="text" class="form-control"required/>
             <div class="invalid-feedback">Enter valid title</div>
-          </div>
+          </div> 
           <div "mb-3">
             <label for="Description" class="form-label">Description</label>
             <textarea
@@ -20,7 +20,7 @@
             <div class="invalid-feedback">Description is required</div>
           </div>
 
-          <div "mb-3">
+          <!-- <div class="mb-3">
             <label for="Image" class="form-label">Image Link</label>
             <input
             name="listing[image][url]"
@@ -28,7 +28,18 @@
             type="text"
             class="form-control"
           />
+          </div> -->
+
+            <div class="mb-3">
+            <label for="Image" class="form-label">Upload Image </label>
+            <input
+            name="listing[image]"
+            type="file"
+            class="form-control"
+            required
+          />
           </div>
+
           <div "mb-3">
             <label for="Price" class="form-label">Price</label>
             <input name="listing[price]" placeholder="Enter price"  class="form-control"required />
@@ -48,6 +59,22 @@
                   <div class="invalid-feedback">Enter valid location</div>
               </div>
           </div>
+
+          <!-- <div class="mb-3">
+              <label for="category" class="form-label">Category</label>
+              <select class="form-select" id="category" name="listing[category]" required>
+                  <option selected disabled value="">Choose a category...</option>
+                  <option value="Trending">Trending</option>
+                  <option value="Rooms">Rooms</option>
+                  <option value="Mountain-city">Mountain-city</option>
+                  <option value="Snowboarding">Snowboarding</option>
+                  <option value="Beach">Beach</option>
+                  <option value="Swimming">Swimming</option>
+                  <option value="Farms">Farms</option>
+                  <option value="Camping">Camping</option>
+              </select>
+              <div class="invalid-feedback">Please select a valid category.</div>
+          </div> -->
           
 
           <br /><br />
