--- a/views/page.ejs
+++ b/views/page.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <%= successMsg %>
+    <!-- <%= successMsg %> -->
     <%= errorMsg %>
     <h1>Hellow <%= name %></h1>
 </body>
