--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,14 +1,74 @@
-<% layout("/layouts/boilerplate")%> <%= success%> 
+<% layout("/layouts/boilerplate")%>
 <body>
-  <h3>All Listings</h3>
-  <!-- <form method="GET" action="/listings/new">
-    <button>Create New Listing</button>
-  </form> -->
+ <div id="filters">
+    <div class="filter">
+        <div><i class="fa-solid fa-fire"></i></div>
+        <p>Trending</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-bed"></i></div>
+        <p>Rooms</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-mountain-city"></i></div>
+        <p>Mountain-city</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-person-snowboarding"></i></div>
+        <p>Snowboarding</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-umbrella-beach"></i></div>
+        <p>Beach</p>
+    </div>
+   
+    <div class="filter">
+        <div><i class="fa-solid fa-person-swimming"></i></div>
+        <p>Amazing Pools</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-campground"></i></div>
+        <p>Camping</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-snowflake"></i></div>
+        <p>Arctic</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-gas-pump"></i></div>
+        <p>Pump</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-sailboat"></i></div>
+        <p>Boat</p>
+    </div>
+    <div class="filter">
+        <div><i class="fa-solid fa-igloo"></i></div>
+        <p>Domes</p>
+    </div>
+    
+    <div class="tax-toggle">
+      <div class="form-check-reverse form-switch">
+          <input
+              class="form-check-input"
+              type="checkbox"
+              role="switch"
+              id="flexSwitchCheckDefault"
+          />
+            <label class="form-check-label" for="flexSwitchCheckDefault">
+              Display total after taxes
+            </label>
+       </div> 
+    </div>
+</div>
 
-  <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-2">
+
+ </div>
+
+  <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-2 mt-3">
     <% for(let listing of allListings) { %>
       <a href="/listings/<%=listing._id %>" style="text-decoration: none;">
-        <div class="card-col card ">         
+        <div class="card-col card col ms-4">         
           <img src="<%= listing.image.url %>"
            class="card-img-top"
            alt="<%= listing.title %>"
@@ -19,12 +79,28 @@
             <p class="card-text">
             <b><%= listing.title %></b> <br>
             <%= listing.price ? listing.price.toLocaleString("en-IN", { style: "currency", currency: "INR" }) : "Price not available" %> /per night
+            <i class="tax-info" style="display: none;">&nbsp;&nbsp;+18% GST</i>
             </p>
           </div>
         </div>
       </a>
     <% } %>
   </div>
+
+  <script>
+    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+    taxSwitch.addEventListener("click", () => {
+        let taxInfo = document.getElementsByClassName("tax-info");
+        for (info of taxInfo) {
+            if (info.style.display != "inline") {
+                info.style.display = "inline";
+            } else {
+                info.style.display = "none";
+            }
+        }
+    });
+</script>
+  
 
 </body>
 
