--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,17 +10,19 @@
       alt="listing image"
     />
     <div class="card-body">
-      <p class="card-text"> <br />
-        <%= listing.description %> <br />
-         <%= listing.price ? listing.price.toLocaleString("en-IN", { style: "currency", currency: "INR" }) : "Price not available" %> /per night <br />
-        <%= listing.location %> <br />
-        <%= listing.country %>
-      </p>
+
+        <p class="card-text">Owned by: <i><%= listing.owner.username %></i></p>
+        <p class="card-text"><%= listing.description %></p>
+        <p class="card-text"><%= listing.price ? listing.price.toLocaleString("en-IN", { style: "currency", currency: "INR" }) : "Price not available" %> /per night </p> 
+        <p class="card-text"><%= listing.location %></p>
+        <p class="card-text"><%= listing.country %></p>
     </div>
   </div>
 </div>
 
 <br />
+
+<% if(currUser && currUser._id.equals(listing.owner._id)) { %>
 <div class="btns"> 
   <a 
     href="/listings/<%= listing._id %>/edit" 
@@ -31,15 +33,32 @@
     <button class="btn btn-dark offset-5">Delete</button>
   </form>
 </div>
+<%}%>
+
 
 <div class="col-8 offset-3">   
  <hr>
+ <%  if(currUser) { %>
  <h4>Give your Reviews</h4>
  <form action="/listings/<%=listing.id%>/reviews"method="POST" novalidate class="needs-validation">
-    <div class="mb-3 mt-3">
-      <label for="rating" class="form-label">Rating</label>
-      <input type="range" min="1" max="5" id="rating" name="review[rating]" />
-    </div>
+
+  <div class="mb-3 mt-3"></div>
+   <label for="rating" class="form-label">Rating</label>
+  <fieldset class="starability-slot">
+   
+  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+  <label for="first-rate1" title="Terrible">1 star</label>
+  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
+
     <div>
       <label for="comment" class="form-label">Comments</label>
       <textarea
@@ -57,16 +76,16 @@
     <button class="btn btn-outline-dark">Submit</button>
   
   </form>
+ <% } %> 
 
-  <hr><br>
   <p><b>All Reviews</b></p>
    <div class="row">
       <% for(review of listing.reviews) { %>
         <div class="card col-5 ms-3 mb-3 bordered-card"> 
           <div class="card-body">
-            <h5 class="card-title">Jane Doe</h5>
+            <h5 class="card-title">@<%= review.author.username  %></h5>
+            <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
             <p class="card-text"><%= review.comment %></p>
-            <p class="card-text"><%= review.rating %> star</p>
             <form 
               class="mb-3" 
               method="POST" 
