--- a/public/CSS/rating.css
+++ b/public/CSS/rating.css
@@ -108,8 +108,8 @@
 
 .starability-slot > label {
   position: relative;
-  display: inline-block;
   float: left;
+   /* display: inline-block; */
   width: 30px;
   height: 30px;
   font-size: 0.1em;
